--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,7 +12,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: [3.8, 3.9, 3.10, 3.11, 3.12, 3.13]
+        python-version: [3.10, 3.11, 3.12]
     
     name: Tests 
     runs-on: ${{ matrix.os }}
@@ -31,6 +31,6 @@ jobs:
 
       - name: Add repo to PYTHONPATH
         run: echo "PYTHONPATH=$PWD" >> $GITHUB_ENV
-        
+
       - name: Run tests
         run: pytest
