--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -33,4 +33,6 @@ jobs:
         run: echo "PYTHONPATH=$PWD" >> $GITHUB_ENV
 
       - name: Run tests
-        run: PYTHONPATH=. pytest
+        env:
+          PYTHONPATH: ${{ github.workspace }}
+        run: pytest -q
